# campaign-copilot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/core/agent/: agent.py  executor.py  fallback.py  hooks.py  prompts.py  router.py  tools.py  types.py
app/core/llm/: client.py  embeddings.py
app/core/observability/: logging.py  router.py  trace.py
app/features/campaign/: idempotency.py  models.py  router.py  service.py
app/features/guidelines/: ingest.py  service.py  store.py
app/features/segment/: compiler.py  dsl.py  lifecycle.py  metrics.py  router.py  service.py
app/shared/: config.py  db.py  source.py
data/: features.json  users.csv  users.json
eval/: REPORT.md  golden_cases.py  harness.py  run_eval.py  scorecard.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_campaign.py  test_compiler.py  test_copilot.py  test_executor.py  test_fallback.py  test_health.py  test_metrics.py  test_rag.py  test_segments.py  test_tools.py
tests/fixtures/: guideline_vectors.npz
