[project]
name = "campaign-copilot"
version = "0.1.0"
description = "Campaign Copilot: an LLM agent that helps a marketer go from a plain-English goal to a ready-to-launch campaign."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
